--- a/index.html
+++ b/index.html
@@ -375,12 +375,19 @@
       </div>
       <form id="login-form" class="auth-form">
         <div class="form-group">
-          <input type="email" id="login-email" placeholder="Email" required>
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" placeholder="votre@email.com" required>
         </div>
         <div class="form-group">
-          <input type="password" id="login-password" placeholder="Mot de passe" required>
+          <label for="login-password">Mot de passe</label>
+          <input type="password" id="login-password" placeholder="Votre mot de passe" required>
         </div>
         <button type="submit" class="btn-primary btn-full">Se connecter</button>
+        <div class="auth-demo">
+          <p><strong>Compte de test :</strong></p>
+          <p>Email: owner@sailingloc.com</p>
+          <p>Mot de passe: password123</p>
+        </div>
         <p class="auth-switch">
           Pas encore de compte ? 
           <a href="#" id="switch-to-register">Inscrivez-vous</a>
