--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
             <div class="contact-icon">📍</div>
             <div>
               <h4>Adresse</h4>
-              <p>Port de Plaisance<br>06400 Cannes, France</p>
+              <p>45 rue de la Loire<br>, 17000 La Rochelle, France</p>
             </div>
           </div>
           
@@ -99,7 +99,7 @@
             <div class="contact-icon">✉️</div>
             <div>
               <h4>Email</h4>
-              <p>contact@sailingloc.com</p>
+              <p>sailingloc98@gmail.com</p>
             </div>
           </div>
 
@@ -116,10 +116,7 @@
             <div>
               <h4>Réseaux sociaux</h4>
               <div class="social-links">
-                <a href="#" class="social-link">📘 Facebook</a>
                 <a href="#" class="social-link">📷 Instagram</a>
-                <a href="#" class="social-link">🐦 Twitter</a>
-                <a href="#" class="social-link">💼 LinkedIn</a>
               </div>
             </div>
           </div>
@@ -145,7 +142,6 @@
               <option value="reservation">Question sur une réservation</option>
               <option value="boat">Information sur un bateau</option>
               <option value="service">Demande de service</option>
-              <option value="partnership">Partenariat</option>
               <option value="other">Autre</option>
             </select>
           </div>
@@ -238,36 +234,6 @@
     </div>
   </section>
 
-  <!-- Section Carte -->
-  <section class="map-section">
-    <div class="container">
-      <div class="section-header">
-        <h2>Notre Localisation</h2>
-        <p>Retrouvez-nous au port de plaisance de Cannes</p>
-      </div>
-      
-      <div class="map-container">
-        <div class="map-placeholder">
-          <div class="map-content">
-            <h3>📍 Port de Plaisance de Cannes</h3>
-            <p>Quai Laubeuf, 06400 Cannes, France</p>
-            <div class="map-info">
-              <div class="map-info-item">
-                <strong>Accès :</strong> En voiture, bus ou train
-              </div>
-              <div class="map-info-item">
-                <strong>Parking :</strong> Parking du port disponible
-              </div>
-              <div class="map-info-item">
-                <strong>Métro :</strong> Ligne 1, arrêt Port
-              </div>
-            </div>
-            <button class="btn-primary" onclick="openMap()">Voir sur la carte</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer class="footer">
