ajout direction sur socialMedia insta

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
             <div>
               <h4>Réseaux sociaux</h4>
               <div class="social-links">
-                <a href="#" class="social-link">📷 Instagram</a>
+                <a href="https://www.instagram.com/sailinglocproject/" target="_blank" class="social-link">📷 Instagram</a>
               </div>
             </div>
           </div>
