--- a/services.html
+++ b/services.html
@@ -265,9 +265,9 @@
         <div class="footer-section">
           <h4>Légal</h4>
           <ul>
-            <li><a href="#">Conditions générales</a></li>
-            <li><a href="#">Politique de confidentialité</a></li>
-            <li><a href="#">Mentions légales</a></li>
+            <li><a href="conditions_generales.html">Conditions générales</a></li>
+            <li><a href="politique_confidentialite.html">Politique de confidentialité</a></li>
+            <li><a href="mentions_legales.html">Mentions légales</a></li>
           </ul>
         </div>
       </div>
