fix luxury category

--- a/boats.html
+++ b/boats.html
@@ -266,10 +266,8 @@
             <select id="boat-category" required>
               <option value="">Sélectionner</option>
               <option value="standard">Standard</option>
-              <option value="luxe">Luxe</option>
-              <option value="economique">Économique</option>
-              <option value="sportif">Sportif</option>
-              <option value="familial">Familial</option>
+              <option value="luxury">Luxe</option>
+              <option value="budget">Économique</option>
             </select>
           </div>
         </div>
