--- a/boat-management.html
+++ b/boat-management.html
@@ -269,7 +269,7 @@
     <script type="module" src="src/main.js"></script>
     <script type="module">
         // Script spécifique à la gestion des bateaux
-        import { SailingLocApp } from './src/main.js';
+        import SailingLocApp from './src/main.js';
         
         // Initialiser l'application
         window.app = new SailingLocApp();
