--- a/boat-management.html
+++ b/boat-management.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion des Bateaux - SailingLoc</title>
     <link rel="stylesheet" href="src/style.css">
-    <link rel="icon" href="public/boat-icon.svg" type="image/svg+xml">
+    <link rel="icon" href="boat-icon.svg" type="image/svg+xml">
 </head>
 <body>
     <!-- Navigation -->
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="index.html">
-                    <img src="public/boat-icon.svg" alt="SailingLoc" class="logo">
+                    <img src="boat-icon.svg" alt="SailingLoc" class="logo">
                     <span class="logo-text">SailingLoc</span>
                 </a>
             </div>
