Ajout Page Experience

--- a/boats.html
+++ b/boats.html
@@ -21,14 +21,14 @@
       <div class="nav-menu" id="nav-menu">
         <a href="index.html" class="nav-link">Accueil</a>
         <a href="boats.html" class="nav-link active">Bateaux</a>
-        <a href="services.html" class="nav-link">Services</a>
+  <a href="experience.html" class="nav-link">Experience</a>
+
         <a href="contact.html" class="nav-link">Contact</a>
       </div>
       
       <div class="nav-auth">
         <button id="login-btn" class="btn-secondary">Connexion</button>
         <button id="register-btn" class="btn-primary">Inscription</button>
-        
         <!-- Menu utilisateur (caché par défaut) -->
         <div id="user-menu" class="user-menu" style="display: none;">
           <div class="user-avatar" id="user-avatar">
