--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <div class="nav-menu" id="nav-menu">
         <a href="index.html" class="nav-link">Accueil</a>
         <a href="boats.html" class="nav-link">Bateaux</a>
-        <a href="services.html" class="nav-link">Services</a>
+  <a href="experience.html" class="nav-link">Experience</a>
         <a href="contact.html" class="nav-link active">Contact</a>
       </div>
       
