--- a/services.html
+++ b/services.html
@@ -19,10 +19,10 @@
       </div>
       
       <div class="nav-menu" id="nav-menu">
-        <a href="index.html" class="nav-link">Accueil</a>
-        <a href="boats.html" class="nav-link">Bateaux</a>
-        <a href="services.html" class="nav-link active">Services</a>
-        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="index.html" class="nav-link" data-i18n="nav.home">Accueil</a>
+        <a href="boats.html" class="nav-link" data-i18n="nav.boats">Bateaux</a>
+        <a href="services.html" class="nav-link" data-i18n="nav.experience">Experience</a>
+        <a href="contact.html" class="nav-link" data-i18n="nav.contact">Contact</a>
       </div>
       
       <div class="nav-auth">
