--- a/experience.html
+++ b/experience.html
@@ -348,11 +348,11 @@
             </div>
             <div class="panel__gallery">
               <figure class="shot">
-                <img src="dist/assets/bateaux-menorca-espagne-2.jpg" alt="Choix du bateau sur SailingLoc">
+                <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&h=600&fit=crop" alt="Choix du bateau sur SailingLoc">
                 <figcaption class="shot__cap">Choix du bateau</figcaption>
               </figure>
               <figure class="shot">
-                <img src="/dist/assets/conception-creative-yacht-smartphone-notion-reservation-ligne-concept-voyage-tourisme_597582-112.jpg" alt="Réservation en ligne SailingLoc">
+                <img src="https://images.unsplash.com/photo-1558618047-3c8c76ca7d13?w=800&h=600&fit=crop" alt="Réservation en ligne SailingLoc">
                 <figcaption class="shot__cap">Réservation en ligne</figcaption>
               </figure>
             </div>
@@ -373,11 +373,11 @@
             </div>
             <div class="panel__gallery">
               <figure class="shot">
-                <img src="/dist/assets/pexels-dave-ang-2040702-3660828.jpg" alt="Briefing de sécurité avant la sortie en mer">
+                <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&h=600&fit=crop" alt="Briefing de sécurité avant la sortie en mer">
                 <figcaption class="shot__cap">Briefing sécurité</figcaption>
               </figure>
               <figure class="shot">
-                <img src="dist/assets/vnements-exceptionnels-188c9.jpg" alt="Départ du port pour la navigation">
+                <img src="https://images.unsplash.com/photo-1558618047-3c8c76ca7d13?w=800&h=600&fit=crop" alt="Départ du port pour la navigation">
                 <figcaption class="shot__cap">Départ du port</figcaption>
               </figure>
             </div>
@@ -398,11 +398,11 @@
             </div>
             <div class="panel__gallery">
               <figure class="shot">
-                <img src="dist/assets/barca-a-vela.jpg" alt="Navigation au mouillage avec activités">
+                <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&h=600&fit=crop" alt="Navigation au mouillage avec activités">
                 <figcaption class="shot__cap">Navigation au mouillage</figcaption>
               </figure>
               <figure class="shot">
-                <img src="dist/assets/retour-au-port.jpg" alt="Retour au port à la fin de la location">
+                <img src="https://images.unsplash.com/photo-1558618047-3c8c76ca7d13?w=800&h=600&fit=crop" alt="Retour au port à la fin de la location">
                 <figcaption class="shot__cap">Retour au port</figcaption>
               </figure>          
             </div>
