--- a/boats.html
+++ b/boats.html
@@ -135,7 +135,7 @@
               <span class="price">850€</span>
               <span class="price-unit">/jour</span>
             </div>
-            <button class="btn-primary btn-full boat-details-btn">Voir les détails</button>
+            <button class="btn-primary btn-full boat-details-btn" data-boat-id="boat1">Voir les détails</button>
           </div>
         </div>
         
@@ -160,7 +160,7 @@
               <span class="price">650€</span>
               <span class="price-unit">/jour</span>
             </div>
-            <button class="btn-primary btn-full boat-details-btn">Voir les détails</button>
+            <button class="btn-primary btn-full boat-details-btn" data-boat-id="boat1">Voir les détails</button>
           </div>
         </div>
         
@@ -185,7 +185,7 @@
               <span class="price">450€</span>
               <span class="price-unit">/jour</span>
             </div>
-            <button class="btn-primary btn-full boat-details-btn">Voir les détails</button>
+            <button class="btn-primary btn-full boat-details-btn" data-boat-id="boat1">Voir les détails</button>
           </div>
         </div>
       </div>
