--- a/test-api-direct.html
+++ b/test-api-direct.html
@@ -75,6 +75,9 @@
     </div>
   </div>
 
+  <!-- Script principal de l'application -->
+  <script type="module" src="/src/main.js"></script>
+  
   <script>
     function log(message, type = 'info') {
       const logsContainer = document.getElementById('logs');
