--- a/test-boat-card.html
+++ b/test-boat-card.html
@@ -61,6 +61,9 @@
     </div>
   </div>
 
+  <!-- Script principal de l'application -->
+  <script type="module" src="/src/main.js"></script>
+  
   <script>
     // Données du bateau qui causait l'erreur
     const testBoatData = {
