--- a/debug-boats.html
+++ b/debug-boats.html
@@ -89,7 +89,22 @@
     </div>
   </div>
 
+  <!-- Script principal de l'application -->
+  <script type="module" src="/src/main.js"></script>
+  
   <script>
+    // Attendre que l'application soit chargée
+    window.addEventListener('load', () => {
+      // Attendre un peu pour que l'app soit initialisée
+      setTimeout(() => {
+        if (window.app) {
+          log('✅ Application SailingLoc chargée', 'success');
+        } else {
+          log('❌ Application SailingLoc non chargée après délai', 'error');
+        }
+      }, 1000);
+    });
+
     // Données de test
     const testBoatData = {
       specifications: { length: 10, width: 10, fuelType: 'diesel' },
