--- a/test-simple-boat.html
+++ b/test-simple-boat.html
@@ -77,6 +77,9 @@
     </div>
   </div>
 
+  <!-- Script principal de l'application -->
+  <script type="module" src="/src/main.js"></script>
+  
   <script>
     // Données de test simplifiées
     const simpleBoatData = {
