--- a/boats.html
+++ b/boats.html
@@ -14,8 +14,20 @@
   <!-- Navigation -->
   <nav id="navbar" class="navbar">
     <div class="nav-container">
-      <div class="nav-brand">
-        <h2>⛵ SailingLoc</h2>
+      <div class="nav-brand" style="display: flex; align-items: center; gap: 10px;">
+        <img src="dist/assets/sailingloc_logo_mark_no_text_512.png" alt="Logo SailingLoc" style="height:48px;vertical-align:middle;">
+        <h2 style="
+          font-size:2.2rem;
+          font-weight:900;
+          background: linear-gradient(90deg, #2f7fe0 0%, #35c1a0 100%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          letter-spacing: -1px;
+          margin: 0;
+        ">
+          SailingLoc
+        </h2>
       </div>
       
       <div class="nav-menu" id="nav-menu">
@@ -199,7 +211,7 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer (ton snippet) -->
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
@@ -212,7 +224,7 @@
           <h4>Services</h4>
           <ul>
             <li><a href="boats.html">Location de bateaux</a></li>
-            <li><a href="services.html">Services premium</a></li>
+            <li><a href="experience.html">Experience premium</a></li>
             <li><a href="contact.html">Support client</a></li>
           </ul>
         </div>
@@ -220,15 +232,15 @@
         <div class="footer-section">
           <h4>Légal</h4>
           <ul>
-            <li><a href="#">Conditions générales</a></li>
-            <li><a href="#">Politique de confidentialité</a></li>
-            <li><a href="#">Mentions légales</a></li>
+            <li><a href="conditions.html">Conditions générales</a></li>
+            <li><a href="confidentialite.html">Politique de confidentialité</a></li>
+            <li><a href="mentions.html">Mentions légales</a></li>
           </ul>
         </div>
-      </div>
+      </div><!-- fermeture pour .footer-content -->
       
       <div class="footer-bottom">
-        <p>&copy; 2024 SailingLoc. Tous droits réservés.</p>
+        <p>&copy; 2025 SailingLoc. Tous droits réservés.</p>
       </div>
     </div>
   </footer>
