--- a/payment-summary.html
+++ b/payment-summary.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Confirmation de réservation — SailingLoc</title>
-  <meta name="description" content="Votre réservation a été confirmée ! Merci de votre confiance.">
+  <title>Récapitulatif de paiement — SailingLoc</title>
+  <meta name="description" content="Récapitulatif de votre réservation et paiement sécurisé avec Stripe.">
   <link rel="stylesheet" href="/src/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Styles spécifiques pour la page de confirmation */
-    .confirmation-hero{
-      background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+    /* Styles spécifiques pour la page de paiement */
+    .payment-hero{
+      background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
       color: #fff;
       padding: clamp(40px, 8vw, 80px) 0;
       text-align: center;
       position: relative;
       overflow: hidden;
     }
-    .confirmation-hero::before {
+    .payment-hero::before {
       content: '';
       position: absolute;
       top: 0;
@@ -29,7 +29,7 @@
       background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="25" cy="25" r="1" fill="white" opacity="0.1"/><circle cx="75" cy="75" r="1" fill="white" opacity="0.1"/><circle cx="50" cy="10" r="0.5" fill="white" opacity="0.05"/><circle cx="10" cy="60" r="0.5" fill="white" opacity="0.05"/><circle cx="90" cy="40" r="0.5" fill="white" opacity="0.05"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>');
       opacity: 0.3;
     }
-    .confirmation-hero h1{
+    .payment-hero h1{
       font-family: var(--font-display);
       font-size: clamp(2.5rem, 5vw, 4rem);
       font-weight: 900;
@@ -38,18 +38,18 @@
       position: relative;
       z-index: 1;
     }
-    .confirmation-hero p{
+    .payment-hero p{
       opacity: 0.95;
       font-size: 1.2rem;
       position: relative;
       z-index: 1;
     }
 
-    .confirmation-page{
+    .payment-page{
       padding: clamp(30px, 5vw, 60px) 0;
       background: linear-gradient(180deg, #f8fafc 0%, #ffffff 100%);
     }
-    .confirmation-grid{
+    .payment-grid{
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: clamp(20px, 4vw, 40px);
@@ -58,10 +58,10 @@
       padding: 0 20px;
     }
     @media (max-width: 1024px){
-      .confirmation-grid{grid-template-columns: 1fr; gap: 30px;}
+      .payment-grid{grid-template-columns: 1fr; gap: 30px;}
     }
 
-    .confirmation-card, .summary-card{
+    .payment-card, .summary-card{
       background: #fff;
       border: 1px solid #e2e8f0;
       border-radius: 24px;
@@ -69,43 +69,9 @@
       padding: clamp(24px, 3vw, 32px);
       transition: all 0.3s ease;
     }
-    .confirmation-card:hover, .summary-card:hover{
+    .payment-card:hover, .summary-card:hover{
       box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
       transform: translateY(-2px);
-    }
-
-    .success-icon{
-      width: 80px;
-      height: 80px;
-      background: linear-gradient(135deg, #10b981 0%, #059669 100%);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 24px;
-      font-size: 2rem;
-      color: #fff;
-    }
-
-    .booking-number{
-      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
-      border: 2px solid #bae6fd;
-      border-radius: 16px;
-      padding: 16px 20px;
-      margin: 20px 0;
-      text-align: center;
-    }
-    .booking-number-label{
-      color: #0369a1;
-      font-size: 0.9rem;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-    .booking-number-value{
-      color: #0c4a6e;
-      font-size: 1.5rem;
-      font-weight: 800;
-      font-family: 'Courier New', monospace;
     }
 
     .boat-image{
@@ -201,7 +167,7 @@
     }
 
     .btn-primary{
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
       color: #fff;
       border: none;
       padding: 16px 32px;
@@ -210,74 +176,44 @@
       font-size: 1.1rem;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
       position: relative;
       overflow: hidden;
-      text-decoration: none;
-      display: inline-block;
-      text-align: center;
+      width: 100%;
     }
     .btn-primary:hover{
       transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(102, 126, 234, 0.6);
+      box-shadow: 0 8px 25px rgba(59, 130, 246, 0.6);
     }
     .btn-primary:active{
       transform: translateY(0);
     }
-
-    .btn-secondary{
-      background: #fff;
-      color: #374151;
-      border: 2px solid #e5e7eb;
-      padding: 16px 32px;
-      border-radius: 16px;
-      font-weight: 700;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      text-align: center;
-    }
-    .btn-secondary:hover{
-      background: #f9fafb;
-      border-color: #d1d5db;
-      transform: translateY(-1px);
+    .btn-primary:disabled{
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
     }
 
-    .action-buttons{
-      display: flex;
-      gap: 16px;
-      margin-top: 24px;
+    .loading{
+      opacity: 0.6;
+      pointer-events: none;
     }
-    @media (max-width: 640px){
-      .action-buttons{
-        flex-direction: column;
-      }
+    .loading::after{
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 20px;
+      height: 20px;
+      margin: -10px 0 0 -10px;
+      border: 2px solid #f3f3f3;
+      border-top: 2px solid #667eea;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
     }
-
-    .email-notice{
-      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
-      border: 2px solid #bae6fd;
-      border-radius: 16px;
-      padding: 20px;
-      margin: 24px 0;
-      text-align: center;
-    }
-    .email-notice-icon{
-      font-size: 2rem;
-      margin-bottom: 12px;
-    }
-    .email-notice-title{
-      color: #0369a1;
-      font-weight: 700;
-      font-size: 1.1rem;
-      margin-bottom: 8px;
-    }
-    .email-notice-text{
-      color: #0c4a6e;
-      font-size: 0.95rem;
-      margin: 0;
+    @keyframes spin{
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .error-message{
@@ -294,6 +230,23 @@
     }
     .error-message::before{
       content: '⚠️';
+      font-size: 1.2rem;
+    }
+
+    .success-message{
+      background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
+      border: 2px solid #bbf7d0;
+      color: #166534;
+      padding: 16px 20px;
+      border-radius: 16px;
+      margin: 16px 0;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+    .success-message::before{
+      content: '✅';
       font-size: 1.2rem;
     }
   </style>
@@ -365,58 +318,23 @@
         <span style="color: #94a3b8;">›</span>
         <span id="breadcrumb-boat-name" style="color: #374151; font-weight: 600;">Chargement...</span>
         <span style="color: #94a3b8;">›</span>
-        <span style="color: #374151; font-weight: 600;">Confirmation</span>
+        <span style="color: #374151; font-weight: 600;">Paiement</span>
       </nav>
     </div>
   </section>
 
   <!-- Hero Section -->
-  <section class="confirmation-hero">
+  <section class="payment-hero">
     <div class="container">
-      <h1>Réservation confirmée !</h1>
-      <p>Merci de votre confiance, votre réservation a été enregistrée avec succès</p>
+      <h1>Récapitulatif de paiement</h1>
+      <p>Vérifiez les détails de votre réservation et procédez au paiement sécurisé</p>
     </div>
   </section>
 
-  <!-- Confirmation Page -->
-  <section class="confirmation-page">
+  <!-- Payment Page -->
+  <section class="payment-page">
     <div class="container">
-      <div class="confirmation-grid">
-        <!-- Confirmation principale -->
-        <div class="confirmation-card">
-          <div class="success-icon">✅</div>
-          <h2 style="text-align: center; margin-bottom: 20px; color: #1e293b; font-size: 1.8rem; font-weight: 800;">
-            Félicitations !
-          </h2>
-          <p style="text-align: center; color: #64748b; margin-bottom: 24px; font-size: 1.1rem;">
-            Votre réservation a été confirmée et vous recevrez un email de confirmation dans quelques minutes.
-          </p>
-
-          <!-- Numéro de réservation -->
-          <div class="booking-number">
-            <div class="booking-number-label">Numéro de réservation</div>
-            <div class="booking-number-value" id="booking-number">Chargement...</div>
-          </div>
-
-          <!-- Notice email -->
-          <div class="email-notice">
-            <div class="email-notice-icon">📧</div>
-            <div class="email-notice-title">Email de confirmation envoyé</div>
-            <p class="email-notice-text">
-              Nous avons envoyé un email de confirmation avec tous les détails de votre réservation à l'adresse fournie.
-            </p>
-          </div>
-
-          <!-- Messages d'erreur -->
-          <div id="error-message" class="error-message" style="display: none;"></div>
-
-          <!-- Boutons d'action -->
-          <div class="action-buttons">
-            <a href="/my-bookings.html" class="btn-primary">Voir mes réservations</a>
-            <a href="/boats.html" class="btn-secondary">Réserver un autre bateau</a>
-          </div>
-        </div>
-
+      <div class="payment-grid">
         <!-- Récapitulatif de la réservation -->
         <div class="summary-card">
           <h2 style="margin-bottom: 20px; color: #1e293b; font-size: 1.5rem; font-weight: 800;">Récapitulatif de votre réservation</h2>
@@ -475,9 +393,45 @@
               <span class="price-value" id="service-fee">-</span>
             </div>
             <div class="price-row">
-              <span class="price-label">Total payé</span>
+              <span class="price-label">Total</span>
               <span class="price-value" id="total-price">-</span>
             </div>
+          </div>
+        </div>
+
+        <!-- Section de paiement -->
+        <div class="payment-card">
+          <h2 style="margin-bottom: 20px; color: #1e293b; font-size: 1.5rem; font-weight: 800;">Paiement sécurisé</h2>
+          
+          <!-- Messages d'erreur/succès -->
+          <div id="error-message" class="error-message" style="display: none;"></div>
+          <div id="success-message" class="success-message" style="display: none;"></div>
+
+          <!-- Informations de sécurité -->
+          <div style="background: #f0f9ff; border: 1px solid #bae6fd; border-radius: 12px; padding: 16px; margin-bottom: 24px;">
+            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
+              <span style="font-size: 1.2rem;">🔒</span>
+              <span style="font-weight: 700; color: #0369a1;">Paiement 100% sécurisé</span>
+            </div>
+            <p style="color: #0369a1; font-size: 0.9rem; margin: 0;">
+              Vos données sont protégées par Stripe, leader mondial des paiements en ligne.
+            </p>
+          </div>
+
+          <!-- Bouton de paiement -->
+          <button id="pay-button" class="btn-primary">
+            <span id="pay-button-text">Payer maintenant</span>
+            <span id="pay-button-amount" style="margin-left: 8px;"></span>
+          </button>
+
+          <!-- Informations supplémentaires -->
+          <div style="margin-top: 24px; padding-top: 24px; border-top: 1px solid #e2e8f0;">
+            <p style="color: #64748b; font-size: 0.9rem; text-align: center; margin: 0;">
+              En procédant au paiement, vous acceptez nos 
+              <a href="/conditions.html" style="color: #667eea; text-decoration: underline;">conditions générales</a> 
+              et notre 
+              <a href="/confidentialite.html" style="color: #667eea; text-decoration: underline;">politique de confidentialité</a>.
+            </p>
           </div>
         </div>
       </div>
@@ -516,6 +470,6 @@
   </footer>
 
   <script type="module" src="/src/init.js"></script>
-  <script type="module" src="/src/booking-confirmation.js"></script>
+  <script type="module" src="/src/payment-summary.js"></script>
 </body>
 </html>
