--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
   <nav id="navbar" class="navbar">
     <div class="nav-container">
             <div class="nav-brand" style="display: flex; align-items: center; gap: 10px;">
-        <img src="/assets/sailingloc_logo_mark_no_text_512.png" alt="Logo SailingLoc" style="height:48px;vertical-align:middle;">
+        <img src="dist/assets/sailingloc_logo_mark_no_text_512.png" alt="Logo SailingLoc" style="height:48px;vertical-align:middle;">
         <h2 style="
           font-size:2.2rem;
           font-weight:900;
@@ -524,7 +524,7 @@
   </footer>
 
 
-  <script type="module" src="/assets/main-6B_FRqmo.js"></script>
+  <script type="module" src="/src/main.js"></script>
   <script>
     // Pagination JS (similaire à boats)
     const members = Array.from({length: 23}, (_, i) => ({name: `Membre ${i+1}`, experience: `Expérience ${i+1}`}));
