--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SailingLoc - Location de bateaux</title>
   <meta name="description" content="Louez le bateau de vos rêves avec SailingLoc. Voiliers, catamarans, yachts disponibles partout en France et en Europe.">
-  <link rel="stylesheet" href="/assets/style-DTJA6Xka.css">
+  <link rel="stylesheet" href="/src/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <nav id="navbar" class="navbar">
     <div class="nav-container">
       <div class="nav-brand" style="display: flex; align-items: center; gap: 10px;">
-        <img src="/assets/sailingloc_logo_mark_no_text_512.png" alt="Logo SailingLoc" style="height:48px;vertical-align:middle;">
+        <img src="dist/assets/sailingloc_logo_mark_no_text_512.png" alt="Logo SailingLoc" style="height:48px;vertical-align:middle;">
         <h2 style="
           font-size:2.2rem;
           font-weight:900;
@@ -644,6 +644,6 @@
   <!-- Notifications -->
   <div id="notifications-container" class="notifications-container"></div>
 
-  <script type="module" src="/assets/main-6B_FRqmo.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
